--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
     <h3>Lançamentos:</h3>
     <section class="livros">
-      <img src="/imagem/1.png" alt="" width="100px">
+      <img src="imagem/1.png" alt="" width="100px">
       <img src="/imagem/2.png" alt="" width="100px">
       <img src="/imagem/3.png" alt="" width="100px">
       <img src="/imagem/4 (2).png" alt="" width="100px">
@@ -124,5 +124,6 @@
       <p>Times’Book © 2025</p>
     </section>
 </body>
+
 
 </html>
