--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
 
       <div>
-        <img src="/imagem/logo png.png" alt="Logo">
+        <img src="imagem/logo png.png" alt="Logo">
       </div>
       <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" viewBox="0 0 24 24">
           <path fill="currentColor" d="m12 3l8 6v12h-5v-7H9v7H4V9z" />
@@ -56,49 +56,49 @@
   <main>
     <hr class="style">
     <label for="Nome"></label>
-    <input type="text" name="Nome" id="Nome" placeholder="Títulos, autores, editores, ETC" img src="/imagem/pngegg (51).png" alt="" width="20px">
+    <input type="text" name="Nome" id="Nome" placeholder="Títulos, autores, editores, ETC" img src="imagem/pngegg (51).png" alt="" width="20px">
     <section class="lupa">
-      <img src="/imagem/lupa png.png" alt="" width="20px">
+      <img src="imagem/lupa png.png" alt="" width="20px">
     </section>
     <h3>Lançamentos:</h3>
     <section class="livros">
       <img src="imagem/1.png" alt="" width="100px">
-      <img src="/imagem/2.png" alt="" width="100px">
-      <img src="/imagem/3.png" alt="" width="100px">
-      <img src="/imagem/4 (2).png" alt="" width="100px">
-      <img src="/imagem/5.png" alt="" width="100px">
-      <img src="/imagem/6.png" alt="" width="100px">
-      <img src="/imagem/7.png" alt="" width="100px">
-      <img src="/imagem/8.png" alt="" width="100px">
-      <img src="/imagem/9.png" alt="" width="100px">
-      <img src="/imagem/10.png" alt="" width="100px">
-      <img src="/imagem/11.png" alt="" width="100px">
-      <img src="/imagem/12.png" alt="" width="100px">
-      <img src="/imagem/13.png" alt="" width="100px">
-      <img src="/imagem/14.png" alt="" width="100px">
-      <img src="/imagem/16.png" alt="" width="100px">
-      <img src="/imagem/17.png" alt="" width="100px">
-      <img src="/imagem/18.png" alt="" width="100px">
-      <img src="/imagem/19.png" alt="" width="100px">
-      <img src="/imagem/20.png" alt="" width="100px">
-      <img src="/imagem/21.png" alt="" width="100px">
-      <img src="/imagem/22.png" alt="" width="100px">
-      <img src="/imagem/23.png" alt="" width="100px">
-      <img src="/imagem/24.jfif" alt="" width="100px">
-      <img src="/imagem/25.png" alt="" width="100px">
-      <img src="/imagem/26.png" alt="" width="100px">
-      <img src="/imagem/27.png" alt="" width="100px">
-      <img src="/imagem/28.png" alt="" width="100px">
-      <img src="/imagem/29.png" alt="" width="100px">
-      <img src="/imagem/30.png" alt="" width="100px">
-      <img src="/imagem/31.png" alt="" width="100px">
-      <img src="/imagem/32.png" alt="" width="100px">
-      <img src="/imagem//33.png" alt="" width="100px">
-      <img src="/imagem/34.png" alt="" width="100px">
-      <img src="/imagem/35.png" alt="" width="100px">
-      <img src="/imagem/36.png" alt="" width="100px">
-      <img src="/imagem/37.png" alt="" width="100px">
-      <img src="/imagem/1.png" alt="" width="100px">
+      <img src="imagem/2.png" alt="" width="100px">
+      <img src="imagem/3.png" alt="" width="100px">
+      <img src="imagem/4 (2).png" alt="" width="100px">
+      <img src="imagem/5.png" alt="" width="100px">
+      <img src="imagem/6.png" alt="" width="100px">
+      <img src="imagem/7.png" alt="" width="100px">
+      <img src="imagem/8.png" alt="" width="100px">
+      <img src="imagem/9.png" alt="" width="100px">
+      <img src="imagem/10.png" alt="" width="100px">
+      <img src="imagem/11.png" alt="" width="100px">
+      <img src="imagem/12.png" alt="" width="100px">
+      <img src="imagem/13.png" alt="" width="100px">
+      <img src="imagem/14.png" alt="" width="100px">
+      <img src="imagem/16.png" alt="" width="100px">
+      <img src="imagem/17.png" alt="" width="100px">
+      <img src="imagem/18.png" alt="" width="100px">
+      <img src="imagem/19.png" alt="" width="100px">
+      <img src="imagem/20.png" alt="" width="100px">
+      <img src="imagem/21.png" alt="" width="100px">
+      <img src="imagem/22.png" alt="" width="100px">
+      <img src="imagem/23.png" alt="" width="100px">
+      <img src="imagem/24.jfif" alt="" width="100px">
+      <img src="imagem/25.png" alt="" width="100px">
+      <img src="imagem/26.png" alt="" width="100px">
+      <img src="imagem/27.png" alt="" width="100px">
+      <img src="imagem/28.png" alt="" width="100px">
+      <img src="imagem/29.png" alt="" width="100px">
+      <img src="imagem/30.png" alt="" width="100px">
+      <img src="imagem/31.png" alt="" width="100px">
+      <img src="imagem/32.png" alt="" width="100px">
+      <img src="imagem//33.png" alt="" width="100px">
+      <img src="imagem/34.png" alt="" width="100px">
+      <img src="imagem/35.png" alt="" width="100px">
+      <img src="imagem/36.png" alt="" width="100px">
+      <img src="imagem/37.png" alt="" width="100px">
+      <img src="imagem/1.png" alt="" width="100px">
 
     </section>
   </main>
@@ -124,6 +124,5 @@
       <p>Times’Book © 2025</p>
     </section>
 </body>
-
 
 </html>
